# fabric_lite

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: server_fastapi.py
examples/notebooks/: quickstart.ipynb
src/fabriclite/: __init__.py  calibration.py  classifier.py  cli.py  constants.py  export.py  formatting.py  metrics.py  preprocess.py  taxonomy.py
src/fabriclite/utils/: __init__.py  io.py
tests/: __init__.py  test_api.py  test_cli.py  test_cli_batch_outputs.py  test_cli_infer_outputs.py  test_preprocess.py
